コメントを書いた

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <img src="img/works5.jpg">
                 <img src="img/works6.jpg">
             </div>
+            <!-- githubに登録した -->
         </div>
         <div class="section-news">
 
