Newsのタイトルをつけた

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div class="section-news">
-
+            <h1 class="section-title">News</h1>
         </div>
         <div class="section-contact">
 
