Containerのタイトル作成

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             </div>
         </div>
         <div class="section-container">
-
+            <h1 class="section-title">Container</h1>
+            
         </div>
     </main>
 
