--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
             <h1 class="section-title">About</h1>
             <div class="about-item">
                 <p>Xxxxx Ashley</p>
-                <p>2th Floor xxxx Building x-x-x Nishiazabu, Tokyo 106-0031 Japan<br>tel: 000-0000-0000<br>url: www.xxxxxx.jp<br>mail: xxx@xxxxxx.jp</p>
-                <p>プロフィールテキストテキストテキストテキストテキストテキストテキストテキストテキストスト テキストテキストテキストテキ<br>ストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキストテキスト<br>テキストテキストテキストテキスト</p>
+                <p>2th Floor xxxx Building x-x-x Nishiazabu, Tokyo 106-0031 Japan<br>tel: 000-0000-0000<br>url:
+                    www.xxxxxx.jp<br>mail: xxx@xxxxxx.jp</p>
+                <p>プロフィールテキストテキストテキストテキストテキストテキストテキストテキストテキストスト テキストテキストテキストテキ<br>ストテキストテキストテキストテキストテキストテキストテキスト
+                    テキストテキストテキストテキストテキストテキストテキスト<br>テキストテキストテキストテキスト</p>
             </div>
         </div>
         <div class="section-container">
@@ -68,7 +70,16 @@
         </div>
         <div class="section-container">
             <h1 class="section-title">Container</h1>
-            
+            <div>
+                <p>NAME <input type="text" name="name" class="container-form"></p>
+                <p>E-mail <input type="email" name="e-mail" class="container-form"></p>
+                <p>MESSAGE<input type="text" name="message" class="container-form"></p>
+
+            </div>
+            <div>
+                <input type="submit" value="送信する">
+            </div>
+
         </div>
     </main>
 
