--- a/index.html
+++ b/index.html
@@ -69,19 +69,28 @@
             </div>
         </div>
         <div class="section-container">
-            <h1 class="section-title">Container</h1>
-            <div>
-                <p>NAME <input type="text" name="name" class="container-form"></p>
-                <p>E-mail <input type="email" name="e-mail" class="container-form"></p>
-                <p>MESSAGE<input type="text" name="message" class="container-form"></p>
+            <h1 class="section-title">Contact</h1>
 
+            <div class="contact-wrap">
+                <div class="contact-item">
+                    <p class="label-name">NAME</p><input type="text" name="name" class="contact-form">
+                </div>
+                <div class="contact-item">
+                    <p class="label-name">E-mail</p><input type="email" name="e-mail" class="contact-form">
+                </div>
+                <div class="contact-item">
+                    <p class="label-name">MESSAGE</p><textarea name="message" class="contact-form"></textarea>
+                </div>
             </div>
-            <div>
-                <input type="submit" value="送信する">
+            <div class="submit-bottan">
+                <input type="submit" value="送信" >
             </div>
 
         </div>
     </main>
+    <footer>
+        <p>&copy;2020 My Work</p>
+    </footer>
 
 </body>
 
