main画像のレスポンシブ導入

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     </header>
     <main>
         <div>
-            <img src="img/mainvisual-pc.jpg" class="main-img">
+         <img src="img/mainvisual-pc.jpg" class="pc-img">
+         <img src="img/mainvisual-sp.jpg" class="sp-img">
         </div>
         <div class="section-container">
             <h1 class="section-title">About</h1>
