Newsのレスポンシブ

--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
         <div class="section-container">
             <h1 class="section-title">News</h1>
             <div class="news-item">
-                <p><span class="news-date">2020.XX.XX</span>
+                <p><span class="news-date">2020.XX.XX</span><br class="date">
                     デザイン雑誌「ＸＸＸＸＸＸ Vol.11』に掲載していただきました。</p>
-                <p><span class="news-date">2020.XX.XX</span>
+                <p><span class="news-date">2020.XX.XX</span><br class="date">
                     デザイン雑誌「ＸＸＸＸＸＸ Vol.11』に掲載していただきました。</p>
-                <p><span class="news-date">2020.XX.XX</span>
+                <p><span class="news-date">2020.XX.XX</span><br class="date">
                     デザイン雑誌「ＸＸＸＸＸＸ Vol.11』に掲載していただきました。</p>
-                <p><span class="news-date">2020.XX.XX</span>
+                <p><span class="news-date">2020.XX.XX</span><br class="date">
                     デザイン雑誌「ＸＸＸＸＸＸ Vol.11』に掲載していただきました。</p>
-                <p><span class="news-date">2020.XX.XX</span>
+                <p><span class="news-date">2020.XX.XX</span><br class="date">
                     デザイン雑誌「ＸＸＸＸＸＸ Vol.11』に掲載していただきました。</p>
             </div>
         </div>
